Add grouped path multiplicity tests